adjusted about section

--- a/index.html
+++ b/index.html
@@ -162,13 +162,11 @@
             </div>
             <div>
                 <p  class = "tab mt-4 lead">
-                    Vercrescent Clothing was founded in October 2018 by two highschool students, Rohan Kalra and Hamzah Ahmed with one main
-                    goal in mind: inspiring young entrepreneurs and helping other students find their passion by recruiting students to
-                    various roles for the Vercrescent team all while providing high quality clothing for an exceptionally low price.
-                    Students who love to design clothes or market for a company have been given that opportunity by Vercrescent. Everything
-                    that Vercrescent produces, physically or virtually, is all done by students. Providing all students the opportunity and
-                    support to find their true passion all while producing high quality clothes at an exceptionally low price is
-                    the  Vercrescent brand.
+                    Vercrescent Clothing was founded in October 2018 by highschool students Rohan Kalra and Hamzah Ahmed. Together they set
+                    out to start a brand that would not only provide fashionable clothing but inspire and help young entrepreneurs and students
+                    explore their passions. Students who want to pursue fashion design and digital marketing have been given that
+                    opportunity by Vercrescent. Everything that Vercrescent produces, physically or virtually, is done by students.
+                    Providing students with unique opportunities and high-quality clothing is what the Vercrescent brand is all about.
                 </p>
             </div>
         </div>
