--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
      crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
         <!-- Agency Bootstrap CSS -->
         <link href="css/agency.min.css" rel="stylesheet">
     <!-- Bootstrap Core CSS  -->
@@ -67,6 +68,11 @@
                     <li class="nav-item">
                         <a class="text-white nav-link" href="https://twitter.com/vercrescent?lang=en" target="_blank">
                             <i class="fab fa-twitter fa-lg"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-white nav-link" href="https://www.snapchat.com/add/vercrescent" target="_blank">
+                            <i class="fab fa-snapchat fa-lg"></i>
                         </a>
                     </li>
                 </ul>
@@ -152,6 +158,9 @@
                         </div>
                     </div>
                 </div>
+                <div class = " mt-4 text-center">
+                    <h4>Contact Us Through <a class = "text-warning" href = "https://www.instagram.com/vercrescentclothing/?hl=en" target = "_blank">Instagram</a> to purchase clothing</h4>
+                </div>
             </div>
         </div>
     </section>
@@ -178,11 +187,12 @@
             </div>
             <div class = "row justify-content-between">
                 <div class = "mt-3 col-md-5">
-                    <p class = "tab lead">Vercrescent Clothing is going to make an even stronger initiative moving forward to ensure that all students are given
-                    access to the Vercrescent opportunity provided. We will make a push to recruit even more students onto the Vercrescent team
-                    and continue to teach them how we run our business all while providing them insight on future jobs they may be
-                    interested in. While doing this, Vercrescent will continue to make the pledge for high quality clothing at an
-                    exceptionally low price, all while inspiring young entrepreneurs to start their business they have been waiting for.  </p>
+                    <p class = "tab lead">In the coming years, we will be working to further expand our reach. Vercrescent was started as a simple clothing line,
+                    but we will push to include other aspects of pop culture such as music, podcasts, and other media outlets. Vercrescent
+                    Clothing is also going to make an even stronger initiative to ensure that students are given access to opportunities
+                    provided by Vercrescent. While doing this, Vercrescent will continue to abide by the pledge towards high quality
+                    clothing and inspiration for young entrepreneurs. But for now, stay tuned for new clothing coming soon in late 2019 to
+                    early 2020.  </p>
                 </div>
                 <div class = "col-md-5">
                     <img class = "img-fluid rounded shadow" src = "images/Hoodie.jpeg">
