--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <img class=" card-img-top" src="images/HoodieDisplay.jpg" alt="Card image cap">
                             <div class="card-body text-center pb-5">
                                 <h5 class="card-title"><u>Vercrescent Hoodie</u></h5>
-                                <p style = "line-height: 250%"class="card-text">Obsidian Black, 100% preshrunk cotton hoodie that features a tonal black embroidery along the front of the garment.
+                                <p style = "line-height: 250%"class="card-text">Obsidian Black, recycled cotton hoodie that features a tonal black embroidery along the front of the garment.
                                 </p>
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                             <img class="card-img-top" src="images/Tshirt.jpeg" alt="Card image cap">
                             <div class="card-body text-center pb-4">
                                 <h5 class="card-title"><u>Vercrescent classic t-shirt</u></h5>
-                                <p style = "line-height: 225%"class="card-text">A Polar white pre-shrunk cotton t-shirt which features a “Vercrescent Bogo”. This garment has a  black box with
+                                <p style = "line-height: 225%"class="card-text">A Polar white recycled cotton t-shirt which features a “Vercrescent Bogo”. This garment has a  black box with
                                 “Vercrescent” written in a soft gold.
                                 </p>
                             </div>
@@ -151,7 +151,7 @@
                             <img class="card-img-top border-bottom" src="images/ShirtBright.jpeg" alt="Card image cap">
                             <div class="card-body text-center">
                                 <h5 class="card-title"><u>L/S Shirt</u></h5>
-                                <p class="card-text">Classic Vercrescent design made with 100% cotton(preshrunk). The L/S Tee features a centered blacked out logo, with
+                                <p class="card-text">Classic Vercrescent design made with recycled cotton. The L/S Tee features a centered blacked out logo, with
                                 “Vercrescent” screenprint in gold on the sleeves.
                                 </p>
                             </div>
@@ -210,7 +210,7 @@
                     <div class = "col-md-7 mt-5">
                         <p class = "tab lead">
                             If you would like to purchase a product, would like to reach out to us about the various opportunities we can provide
-                            students with, have questions or have feedback for us  please don't hesitate to contact us. We are available over
+                            students with, have questions or have feedback for us please don't hesitate to contact us. We are available over
                             various social media and messaging platforms
                         </p>
                     </div>
@@ -252,7 +252,6 @@
     <p class = "text-center pt-2">Website Made by <a target = "_blank" href = "https://github.com/Arnav100">Arnav Parashar</a>.
          Contact at parashararnav2@gmail.com </p>
     <p class="text-center py-1">© 2019 Vercrescent LLC. All Rights Reserved.</p>
-
     <!-- Jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- <script src="js/jquery.min.js"></script> -->
